2005-05-11  Stefan Jahn  <stefan@lkcc.org>

	* microstrip/cpwstep.h (class cpwstep): Added new coplanar
	waveguide impedance step implementation.  S-parameters still
	missing.

	* microstrip/mscorner.cpp, microstrip/msmbend.cpp,
	microstrip/msstep.cpp: Fixed DC voltage source.

2005-05-03  Stefan Jahn  <stefan@lkcc.org>

	* microstrip/cpwgap.h (class cpwgap): Implemented coplanar
	waveguide series gap discontinuity.

2005-04-30  Stefan Jahn  <stefan@lkcc.org>

	* microstrip/cpwline.cpp: Added static analyseQuasiStatic()
	and analyseDispersion() function for use by other coplanar
	components.

	* devices/device.cpp: New pnJunctionBIP() function for
	calculating current and conductance of bipolar pn-junction.

	* microstrip/cpwopen.h (class cpwopen):  Implemented AC, DC
	and S-parameter calculation for coplanar waveguide open	circuit.

	* microstrip/cpwshort.h (class cpwshort): Implemented AC, DC
	and S-parameter calculation for coplanar waveguide short
	circuit.

2005-04-28  Stefan Jahn  <stefan@lkcc.org>

	* biastee.cpp, dcblock.cpp, dcfeed.cpp: Implemented transient
	models of these components using L and C equivalents.

2005-04-23  Stefan Jahn  <stefan@lkcc.org>

	* strafo.cpp: Fixed S-parameter calculation.  Thanks to Vincent
	for pointing out the misbehaviour and to Michael for fixing it.

	* devices/mosfet.cpp, devices/jfet.cpp, devices/diode.cpp,
	devices/bjt.cpp: Implemented new saveOperatingPoints() function.

2005-04-19  Stefan Jahn  <stefan@lkcc.org>

	* microstrip/cpwline.cpp: Fixed strip thickness calculation and
	impedance of coplanar waveguide.

	* devices/device.cpp: Fixed computation of pn charge.

2005-04-17  Stefan Jahn  <stefan@lkcc.org>

	* devices/mosfet.cpp: Using the new pnJunctionMOS() function.

	* devices/device.cpp: New function computing the current and
	conductance of a MOS pn-junction.
	(pnCharge): More stable implementation of this computation.

2005-04-09  Stefan Jahn  <stefan@lkcc.org>
