@@ -18,3 +18,4 @@ sparc-sun-solaris2.8		gcc 2.95.3	0.0.4	ok
 sparc-sun-solaris2.9		gcc 2.95.3	0.0.2	ok
 powerpc-apple-darwin7.4.0	gcc 3.3		0.0.2	ok
 powerpc-apple-darwin7.5.0	gcc 3.3		0.0.3	ok
+powerpc-unknown-linux-gnu	gcc 3.4.1	0.0.5	ok
